# buckia

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CI.md  CLAUDE.md  DEVELOP.md  MANIFEST.in  README.md  SECRETS.md  TESTING.md  pyproject.toml  pyrightconfig.json  pytest.ini  setup.py  weasyprint-html-evaluation-framework.md  whitepaper-cover-integration-guide.md  whitepaper-pdf-fixes-trail.md  whitepaper-writing-guidelines.md
.github/workflows/: integration-tests.yml  lint.yml  publish.yml  unit-tests.yml
BuckiaKit/: Package.resolved  Package.swift
BuckiaKit/Sources/BuckiaKit/Client/: BuckiaClient.swift  BuckiaConfiguration.swift
BuckiaKit/Sources/BuckiaKit/Database/: DatabaseManager.swift
BuckiaKit/Tests/BuckiaKitTests/: BuckiaClientTests.swift  BuckiaConfigurationTests.swift  DatabaseManagerTests.swift  InboundChangesTests.swift  TestPlan.md
buckia/: __init__.py  cli.py  client.py  config.py  pdf.py  pdf_analysis.py
buckia/security/: __init__.py  token_manager.py
buckia/sync/: __init__.py  b2.py  base.py  bunny.py  factory.py
buckia/sync/bunnycdn/: CDN.py  Storage.py  __init__.py
docs/: CHANGELOG.md  CHANGES.md  CI.md  CONFIGURATION_CORRECTED.md  DOCUMENTATION_CONSOLIDATION.md  PYPI_RELEASE.md  README.md  TESTING.md  WEASYPRINT_INTEGRATION_TESTS.md  buckia-pdf-analysis-extension.md  configuration.md  documentation-reference-template.md  pdf-best-practices.md  pdf-css-architecture.md  pdf-design-system-analysis.md  project-tasks-tracker.md  visual-design-quality-evaluation-project.md
docs/cli/: overview.md
docs/configuration/: basic.md  overview.md  pdf.md  teams.md
docs/development/: CI.md  guide.md  vscode.md
docs/features/: security.md
docs/mobile/: swift.md
docs/operations/: secrets.md
reference/: collection-manifest.md
scripts/: cleanup-docs.sh  demo_weasyprint_integration.py  generate-reference-files.js  publish.sh  run_tests.sh  run_weasyprint_tests.py  setup_env.sh  test_cli_help.py  validate_secrets.py
tests/: KEYRING_TESTS.md  OPERATIONS_TESTS.md  SYNC_TESTS.md  conftest.py  test_pdf_analysis.py  test_weasyprint_integration.py
tests/config/: test_config.yaml  test_config.yaml.example
tests/integration/: __init__.py  test_b2.py  test_bunny.py  test_cli_help.py  test_error_handling.py  test_operations.py  test_sync.py
tests/unit/: test_b2_import.py  test_b2_quick.py  test_base.py  test_cli.py  test_cli_help.py  test_client.py  test_config.py  test_factory.py  test_token_manager.py
tests/unit/mocks/: README.md  __init__.py
(+8 files in other folders)
